# robotic_car

./: CMakeLists.txt  FreeRTOSConfig.h  README.md  lwipopts.h  lwipopts_examples_common.h  main.c
components/: CMakeLists.txt
components/ir_sensor/: CMakeLists.txt  ir_line_following.c  ir_line_following.h  ir_sensor.c  ir_sensor.h  ir_sensor_top3.c
components/ir_sensor/project_ir_contrast/: CMakeLists.txt  project_ir_contrast.c
components/ir_sensor/project_ir_pulsewidth/: CMakeLists.txt  project_ir_pulsewidth.c
components/motor_control/: motor_control.c  motor_control.h
components/motor_control/proj_motor/: CMakeLists.txt  proj_motor.c
components/remote/: remote.c  remote.h
components/ultrasonic/: ultrasonic.c  ultrasonic.h
components/ultrasonic_encoder/: ultrasonic_encoder.c  ultrasonic_encoder.h
components/wheel_encoder/: wheel_encoder.c  wheel_encoder.h
components/wifi/car/: wifi-tcp.c  wifi-udp.c  wifi.c  wifi.h
components/wifi/dashboard/: dashboard.c
components/wifi/remote/: remote_wifi.c
